syntax = "proto3";
package ethapi;

message EthTxInput {
    string nonce = 1;
    string gas_price = 2;
    string gas_limit = 3;
    string to = 4;
    string value = 5;
    string data = 6;
    string chain_id = 7;
}

message EthTxOutput {
    string tx_data = 1;
    string tx_hash = 2;
}

message EthMessageSignParam {
    string path = 1;
    string message = 2;
    string sender = 3;
}

message EthMessageSignResult {
    string signature = 1;
}